agrego uso de toList() en lugares